--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       body {
         text-align: center;
-        background: url(/img_ryn/backg.jpg);
+        background: url(https://i.pinimg.com/564x/50/8f/4d/508f4de20e2d5defbef2e982d2726f5b.jpg);
       }
       header {
         background: transparent;
